# route-graph

./: ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  clippy.toml
.cargo/: deny.toml
.github/workflows/: ci.yml  pr-check.yml  release.yml
src/: builder.rs  error.rs  lib.rs  main.rs  model.rs  traits.rs
src/parse/: caddy.rs  mod.rs
src/render/: dot.rs  mermaid.rs  mod.rs
tests/fixtures/caddy/: example.Caddyfile
