[package]
name = "routegraph"
description = "Visualize reverse proxy routing configurations as directed graphs"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dzany/route-graph"
rust-version = "1.75"

[[bin]]
name = "routegraph"
path = "src/main.rs"

[dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"], optional = true }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde_json = "1"

[features]
default = []
serde = ["dep:serde"]

[dev-dependencies]
